--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div id="container">
 					<div class="about_site">
 						<h3>NIE ROZUMIESZ SCHEMATU HORNERA?</h3>
-						<p>Dzięki tej stronie poznasz niezbędną teorię, a także będziesz mógł sprawdzić się<br/> w przygotowanej przeze mnie, interaktywnej części praktycznej.				</p>
+						<p>Dzięki tej stronie poznasz odpowiedzi na nurtujące Cię pytania, poznasz niezbędną teorię, a także będziesz mógł sprawdzić się w interaktywnej części praktycznej.				</p>
 					</div>
 				</div>
 			</section>
@@ -41,31 +41,31 @@
 				<div id="features">
 					<div class="alignment">
 						<div id="services" class="cf">
-							<h3>CO ZNAJDZIESZ NA STRONIE?</h3>
+							<h3>SCHEMAT HORNERA?</h3>
 							<section class="service">
 								<div class="service-icon"><span class="icon-what"></span><br/>Co to jest?</div>
-								<div class="service-description"><p>Znajdziesz tu definicję schematu hornera.</p></div>
+								<div class="service-description"><p>Poznaj definicję i zastosowania.</p></div>
 							</section>
 							<section class="service">
 								<div class="service-icon"><span class="icon-author"></span><br/>Autor</div>
-								<div class="service-description"><p> Znajdziesz tu informacje o autorze schematu. </p></div>
+								<div class="service-description"><p>Dowiedz się, kto jest autorem.</p></div>
 							</section>
 							<section class="service">
 								<div class="service-icon"><span class="icon-equal"></span><br/>Równania</div>
-								<div class="service-description"><p> Teoria o rozwiązywaniu równań schematem hornera. </p></div>
+								<div class="service-description"><p>Naucz się rozwiązywania równań.</p></div>
 							</section>
 
 							<section class="service">
 								<div class="service-icon"><span class="icon-divide"></span><br/>Dzielenie</div>
-								<div class="service-description"><p> Teoria o dzieleniu wielomianu przez dwumian schematem hornera</p></div>
+								<div class="service-description"><p>Naucz się dzielić wielomian przez dwumian.</p></div>
 							</section>
 							<section class="service">
 								<div class="service-icon"><span class="icon-calculator"></span><br/>Kalkulator</div>
-								<div class="service-description"><p> Możesz tu obliczyć dowolne równanie wielomianowe schematem hornera. </p></div>
+								<div class="service-description"><p>Sprawdź wynik równania.</p></div>
 							</section>
 							<section class="service">
 								<div class="service-icon"><span class="icon-checkbox"></span><br/>Sprawdź się</div>
-								<div class="service-description"><p> Możesz tu sprawdzić swoją wiedzę grając. </p></div>
+								<div class="service-description"><p>Sprawdź się w dzieleniu wielomianu przez dwumian.</p></div>
 							</section>
 
 						</div> <!-- END #services -->
