--- a/index.html
+++ b/index.html
@@ -1,77 +1,102 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>SchematHornera</title>
-		<meta name="Author" content=""/>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="onepage-scroll.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <title>SchematHornera</title>
+        <meta name="Author" content=""/>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="onepage-scroll.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
-		<script language="JavaScript" type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
-		<script type="text/javascript" src="onepagescroll.js"></script>
-		<script src="http://use.edgefonts.net/coda:n4,n8:all;raleway:n1,n7,n4,n5,n3,n8,n9,n2,n6:all.js"></script>
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
-	</head>
-	<body>
-		<div class="main">
-			<section id="scroll">
-				<div class="head-background">
-					<div id="heading">
-						<h1>SCHEMAT<br>HORNERA</h1>
-						<h3>UCZ SIĘ W NOWYM STYLU.</h3>
-					</div>
-					<div class="slide-down">
-						<a href="#container"><div class="slide-icon"></div></a>
-					</div>
-				</div>
-				<div class="separation">
-				</div>
-			</section>
-			<section id="scroll">
-				<div id="container">
-					<div class="about_site">
-						<h3>NIE ROZUMIESZ SCHEMATU HORNERA?</h3>
-						<p>Dzięki tej stronie poznasz odpowiedzi na nurtujące Cię pytania, poznasz niezbędną teorię, a także będziesz mógł sprawdzić się w interaktywnej części praktycznej.				</p>
-					</div>
-				</div>
-			</section>
-			<section id="scroll">
-				<div id="features">
-					<div class="alignment">
-						<div id="services" class="cf">
-							<h3>SCHEMAT HORNERA?</h3>
-							<section class="service">
-								<div class="service-icon"><span class="icon-what"></span><br/>Co to jest?</div>
-								<div class="service-description"><p>Poznaj definicję i zastosowania.</p></div>
-							</section>
-							<section class="service">
-								<div class="service-icon"><span class="icon-author"></span><br/>Autor</div>
-								<div class="service-description"><p>Dowiedz się, kto jest autorem.</p></div>
-							</section>
-							<section class="service">
-								<div class="service-icon"><span class="icon-equal"></span><br/>Równania</div>
-								<div class="service-description"><p>Naucz się rozwiązywania równań.</p></div>
-							</section>
+        <script language="JavaScript" type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="onepagescroll.js"></script>
+        <script src="js/chalk.js"></script>
 
-							<section class="service">
-								<div class="service-icon"><span class="icon-divide"></span><br/>Dzielenie</div>
-								<div class="service-description"><p>Naucz się dzielić wielomian przez dwumian.</p></div>
-							</section>
-							<section class="service">
-								<div class="service-icon"><span class="icon-calculator"></span><br/>Kalkulator</div>
-								<div class="service-description"><p>Sprawdź wynik równania.</p></div>
-							</section>
-							<section class="service">
-								<div class="service-icon"><span class="icon-checkbox"></span><br/>Sprawdź się</div>
-								<div class="service-description"><p>Sprawdź się w dzieleniu wielomianu przez dwumian.</p></div>
-							</section>
+        <script src="http://use.edgefonts.net/coda:n4,n8:all;raleway:n1,n7,n4,n5,n3,n8,n9,n2,n6:all.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+        <div class="main">
+            <section id="scroll">
+                <div class="head-background">
+                    <div id="heading">
+                        <h1>SCHEMAT<br>HORNERA</h1>
+                        <h3>UCZ SIĘ W NOWYM STYLU.</h3>
+                    </div>
+                    <div class="slide-down">
+                        <a href="#" class="icon-scroll"></a>
+                    </div>
+                    <div class="separation">
+                    </div>
+                    </section>
+                <section id="scroll">
+                    <div id="container">
+                        <div class="about_site">
+                            <h3>NIE ROZUMIESZ SCHEMATU HORNERA?</h3>
+                            <p>Dzięki tej stronie znajdziesz odpowiedzi na nurtujące Cię pytania, poznasz niezbędną teorię, a także będziesz mógł sprawdzić się w interaktywnej części praktycznej i nauczyć się grając.</p>
+                        </div>
+                    </div>
+                </section>
+                <section id="scroll">
+                    <div id="features">
+                        <div class="alignment">
+                            <div id="services" class="cf">
+                                <h3>SCHEMAT HORNERA?</h3>
+                                <section class="service">
+                                    <div class="service-icon"><span class="icon-what"></span><br/>Co to jest?</div>
+                                    <div class="service-description">
+                                        <h4>DEFINICJA</h4>
+                                        <p>Poznaj definicję i zastosowania.</p></div>
+                                </section>
+                                <section class="service">
+                                    <div class="service-icon"><span class="icon-author"></span><br/>Autor</div>
+                                    <div class="service-description">
+                                        <h4>AUTOR</h4>
+                                        <p>Dowiedz się, kto jest autorem.</p></div>
+                                </section>
+                                <section class="service">
+                                    <div class="service-icon"><span class="icon-equal"></span><br/>Równania</div>
+                                    <div class="service-description">
+                                        <h4>RÓWNANIA</h4>
+                                        <p>Naucz się rozwiązywania równań.</p></div>
+                                </section>
 
-						</div> <!-- END #services -->
-					</div>
-				</div>
-			</section>
-		</div>
-	</body>
-</html>
+                                <section class="service">
+                                    <div class="service-icon"><span class="icon-divide"></span><br/>Dzielenie</div>
+                                    <div class="service-description">
+                                        <h4>DZIELENIE</h4>
+                                        <p>Naucz się dzielić wielomian przez dwumian.</p></div>
+                                </section>
+                                <section class="service">
+                                    <div class="service-icon"><span class="icon-calculator"></span><br/>Kalkulator</div>
+                                    <div class="service-description">
+                                        <h4>KALKULATOR</h4>
+                                        <p>Sprawdź wynik równania.</p></div>
+                                </section>
+                                <section class="service">
+                                    <div class="service-icon"><span class="icon-checkbox"></span><br/>Sprawdź się</div>
+                                    <div class="service-description">
+                                        <h4>ZAGRAJ</h4>
+                                        <p>Sprawdź się w dzieleniu wielomianu przez dwumian.</p></div>
+                                </section>
+                                 <section class="service">
+                                    <div class="service-icon"><span class="icon-abacus"></span><br/>Przelicz</div>
+                                    <div class="service-description">
+                                        <h4>INFORMATYKA</h4>
+                                        <p>Przelicz liczbę na wybrany system liczbowy.</p></div>
+                                </section>
+                                 <section class="board">
+                                     <div class="chalk"></div>
+                                     <canvas id="chalkboard"></canvas>
+                                </section>
+                                         <section id="scroll"></section>
+
+                            </div> <!-- END #services -->
+                        </div>
+                    </div>
+                </section>
+                </div>
+            </body>
+        </html>
