+chalkboard in features (needs small fix)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script language="JavaScript" type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="onepagescroll.js"></script>
-        <script src="js/chalk.js"></script>
+        <script src="chalk.js"></script>
 
         <script src="http://use.edgefonts.net/coda:n4,n8:all;raleway:n1,n7,n4,n5,n3,n8,n9,n2,n6:all.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
@@ -88,8 +88,7 @@
                                         <p>Przelicz liczbę na wybrany system liczbowy.</p></div>
                                 </section>
                                  <section class="board">
-                                     <div class="chalk"></div>
-                                     <canvas id="chalkboard"></canvas>
+
                                 </section>
                                          <section id="scroll"></section>
 
