repaired back to top button (again)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Schemat Hornera</title>
 
     <!-- =========================
-FAV AND TOUCH ICONS  
+FAV AND TOUCH ICONS
 ============================== -->
     <link rel="icon" href="images/favicon2.png">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
@@ -20,7 +20,7 @@ FAV AND TOUCH ICONS
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
     <!-- =========================
-STYLESHEETS   
+STYLESHEETS
 ============================== -->
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -112,7 +112,7 @@ PRELOADER
         <div class="status">&nbsp;</div>
     </div>
     <!-- =========================
-HEADER   
+HEADER
 ============================== -->
     <!-- content here -->
     <header class="header change-dot" data-stellar-background-ratio="0.5" id="home">
@@ -213,8 +213,8 @@ HEADER
     <!-- /END HEADER -->
 
     <!--
-WSTĘP 
-BRIEF LEFT SECTION 
+WSTĘP
+BRIEF LEFT SECTION
 ============================== -->
     <section class="app-brief deep-dark-bg change-dot" id="brief1">
 
@@ -304,7 +304,7 @@ BRIEF LEFT SECTION
     </section>
     <!-- =========================
 ODNOŚNIKI DO PODSTRON
-FEATURES 
+FEATURES
 ============================== -->
     <section class="features change-dot" id="features">
 
@@ -489,7 +489,7 @@ FEATURES
     <!-- =========================
 <!-- =========================
 TŁO ODDZIELAJĄCE
-TESTIMONIALS 
+TESTIMONIALS
 ============================== -->
     <section class="testimonials">
 
@@ -505,7 +505,7 @@ TESTIMONIALS
 
     <!-- =========================
 AUTOR SECTION
-BRIEF RIGHT SECTION 
+BRIEF RIGHT SECTION
 ============================== -->
     <section class="app-brief change-dot" id="brief2">
 
@@ -548,11 +548,11 @@ BRIEF RIGHT SECTION
         <!-- /END CONTAINER -->
 
     </section>
-    <a href="#0" class="cd-top">Top</a>
+    <a href="#home" class="cd-top">Top</a>
     <!-- /END SECTION -->
 
     <!-- =========================
-SCRIPTS 
+SCRIPTS
 ============================== -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/jquery-2.1.1.js"></script>
